Fixed nav overlapping content

--- a/games/static/css/styles.css
+++ b/games/static/css/styles.css
@@ -27,6 +27,11 @@ nav {
     height: 100vh;
 }
 
+div#nav-offset {
+    margin-left: 90px;
+    height: 100vh;
+}
+
 .logo {
     text-align: center;
     display: flex;
